[package]
name = "example-openapi-users-crud"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
poem = { version = "1.3.45" }
# poem = { path = "../../../poem" }
# poem-openapi = { path = "../../../poem-openapi", features = [
#     "swagger-ui",
#     "email",
# ] }
poem-openapi = { version = "*", features = ["swagger-ui", "email"] }
slab = "0.4.4"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread", "sync"] }
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }


[[bin]]
name = "main1"
path = "src/struct_vec.rs"


[[bin]]
name = "main2"
path = "src/log.rs"
